[project]
name = "llm-twin"
version = "0.1.0"
description = ""
authors = [
    {name = "Asen Dulakshana Kavinda ",email = "s22010362@ousl.lk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.dependencies]
python = "~3.11"
zenml = { version = "0.74.0", extras = ["server"] }
pymongo = "^4.6.2"
click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
poethepoet = "0.29.0"
datasets = "^3.0.1"
